cmake_minimum_required(VERSION 3.14)
project(Basics_01 C)

set(CMAKE_C_STANDARD 11)

add_executable(Basics_01 main.c Task_00/Task_00.c Task_00/Task_00.h Task_01/Task_01.c Task_01/Task_01.h Task_02/Task_02.c Task_02/Task_02.h Task_03/Task_03.c Task_03/Task_03.h Task_04/Task_04.c Task_04/Task_04.h Task_05/Task_05.c Task_05/Task_05.h Task_06/Task_06.c Task_06/Task_06.h Task_07/Task_07.c Task_07/Task_07.h Task_08/Task_08.c Task_08/Task_08.h)